# Aprendendo_cpp

./: CMakeLists.txt  README.md  arrays.cpp  arrays.h  aula_for.cpp  aula_for.h  main.cpp
ponteiros/: ponteiros.cpp  ponteiros.h
ponteiros/exercise/: calculadora.cpp  calculadora.h  change.cpp  change.h  counter_n_p.cpp  counter_n_p.h  potencias.cpp  potencias.h  temper.cpp  temper.h
referencias/exercises/: doubles.cpp  doubles.h
